Fixed survey's on iOS

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -130,8 +130,3 @@ h1 {
   width: 100%;
   vertical-align: middle;
 }
-
-.survey {
-	width: 100%;
-	height: 90%;
-}
